2011-02-25  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Properly propagate the palette to QWebPage from QGraphicsWebView
        https://bugs.webkit.org/show_bug.cgi?id=31742

        Discovered while looking at 31742. When we set a palette on the
        QGraphicsWebView we need to propagate it to the page like QWebView.
        I have added the same tests as QWebView to be sure to catch potential
        regressions as well as two extras QVERIFY to check the palette propagation.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::event):
        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (tst_QGraphicsWebView::setPalette_data):
        (tst_QGraphicsWebView::setPalette):

2011-02-25  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed buildfix after r79672.

        [Qt] Build tst_qdeclarativewebview if QT_CONFIG contains declarative.

        * tests/tests.pri:
        * tests/tests.pro:

2011-02-25  Gopal Raghavan  <gopal.1.raghavan@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QML WebView inside a Flickable shows checkers pattern at startup
        https://bugs.webkit.org/show_bug.cgi?id=50222.

        This patch fixes the checkerboard visible at startup even if preferredWidth and preferredHeight are not set.

        * declarative/qdeclarativewebview.cpp:
        (QDeclarativeWebView::init):
        * tests/qdeclarativewebview: Added.
        * tests/qdeclarativewebview/qdeclarativewebview.pro: Added.
        * tests/qdeclarativewebview/resources: Added.
        * tests/qdeclarativewebview/resources/webviewtest.qml: Added.
        * tests/qdeclarativewebview/resources/webviewtestdefault.qml: Added.
        * tests/qdeclarativewebview/tst_qdeclarativewebview.cpp: Added.
        (tst_QDeclarativeWebView::initTestCase):
        (tst_QDeclarativeWebView::cleanupTestCase):
        (tst_QDeclarativeWebView::init):