@@ -305,7 +305,7 @@ void tst_QGraphicsWebView::setPalette()
     webView1.setFocus();
 
     QPalette palette1;
-    QBrush brush1(QColor(Qt::red));
+    QBrush brush1(Qt::red);
     brush1.setStyle(Qt::SolidPattern);
     if (active && background) {
         // Rendered image must have red background on an active QGraphicsWebView.
@@ -361,7 +361,7 @@ void tst_QGraphicsWebView::setPalette()
     webView2.setFocus();
 
     QPalette palette2;
-    QBrush brush2(QColor(Qt::blue));
+    QBrush brush2(Qt::blue);
     brush2.setStyle(Qt::SolidPattern);
     if (active && background) {
         // Rendered image must have blue background on an active QGraphicsWebView.
