@@ -1,5 +1,14 @@
 2011-02-25  Alexis Menard  <alexis.menard@openbossa.org>
 
+        Unreviewed build fix for Intel ICC and MSVC.
+
+        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
+        (tst_QGraphicsWebView::setPalette):
+        * tests/qwebview/tst_qwebview.cpp:
+        (tst_QWebView::setPalette):
+
+2011-02-25  Alexis Menard  <alexis.menard@openbossa.org>
+
         Reviewed by Kenneth Rohde Christiansen.
 
         [Qt] Properly propagate the palette to QWebPage from QGraphicsWebView
